solved the ion icon problem, it was visible over the mobile nav overlay

--- a/general.css
+++ b/general.css
@@ -55,7 +55,10 @@ body {
   color: #555;
   overflow-x: hidden;
 }
-
+svg {
+  width: 100%;
+  height: 100%;
+}
 /* ! Container  */
 
 .container {
