--- a/style.css
+++ b/style.css
@@ -95,7 +95,11 @@
 }
 
 .follow-us {
+  max-width: 15rem;
+  max-height: 10rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 2rem;
 }
 
@@ -306,7 +310,7 @@
 
 /* ! SECTION STATS */
 .section-stats {
-  max-width: 150rem;
+  max-width: 300rem;
   background-color: #333;
   padding: 4.8rem;
 }
@@ -427,7 +431,7 @@
 
 /* ! SECTION CONTACT */
 .section-contact {
-  max-width: 150rem;
+  max-width: 300rem;
   background-color: #333;
   padding: 4.8rem;
 }
@@ -465,7 +469,7 @@
 /* ! FOOTER */
 
 .footer-section {
-  max-width: 150rem;
+  max-width: 300rem;
   background-color: #333;
   padding: 2.4rem 4.8rem;
 }
